12.02.24/v0.1.6.6/b:sprint2/step-2 error correction; added ingredients counter; small css edits to prevent "jumping"; css edits of contructor ingredients list;

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -2,7 +2,7 @@
   composes: pl-4 pr-4 from global;
 
   width: 100%;
-  height: 80vh;
+  height: 65vh;
 
   display: flex;
   justify-content: space-between;
