--- a/src/components/BurgerConstructor/BurgerConstructorStyles.module.scss
+++ b/src/components/BurgerConstructor/BurgerConstructorStyles.module.scss
@@ -16,6 +16,21 @@
       align-self: center;
       margin-right: 15px;
       margin-left: 30px;
+
+      span {
+        margin-left: 5px;
+      }
+    }
+
+    .constructor_item_top svg:last-child,
+    .constructor_item_bottom svg:last-child {
+      margin-left: 5px;
+      margin-right: 10px;
+    }
+
+    .constructor_item_top span:nth-child(3) svg,
+    .constructor_item_bottom span:nth-child(3) svg {
+      margin: 0 19px 0 9px;
     }
 
     .constructor_order {
