--- a/src/components/BurgerIngredients/IngredientGroup/IngredientGroupStyles.module.scss
+++ b/src/components/BurgerIngredients/IngredientGroup/IngredientGroupStyles.module.scss
@@ -1,3 +1,5 @@
+@import "styles/theme_colors";
+
 .ingredient_item {
   width: 50%;
 }
@@ -12,11 +14,22 @@
   width: 100%;
   display: flex;
   flex-flow: row wrap;
+
+  .ingredient_item_wrapper {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
 }
 
 .ingredient_card {
-  width: 50%;
   composes: pb-8 from global;
+
+  width: 50%;
+
+  position: relative;
 
   display: flex;
   flex-flow: column;
@@ -35,5 +48,22 @@
   &.dragging {
 
     opacity: .5;
+  }
+
+  span {
+    position: absolute;
+    right: 15%;
+    top: 5%;
+
+    width: 32px;
+    height: 32px;
+
+    border-radius: 50%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: $scroll_active;
   }
 }
