--- a/src/index.scss
+++ b/src/index.scss
@@ -37,4 +37,7 @@ body {
   composes: pb-4 from global;
   height: 90vh;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
